--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/log"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -25,6 +25,8 @@
         <activity android:name="com.coolweather.app.activity.WeatherActivity">
             
         </activity>
+        <service android:name="com.coolweather.app.sevice.AutoUpdateService"></service>
+        <receiver android:name="com.coolweather.app.receiver.AutoUpdateReceiver"></receiver>
     </application>
 
 </manifest>
